# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1377 2010-09-06 09:04:06 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-09-06 Fixed bug#5867 - Navigation bar does not obey click path.
 - 2010-09-06 Fixed bug#5871 - Ticket information in dashboard is not properly aligned.
 - 2010-09-06 Fixed bug#5876 - Chinese UI issue.
 - 2010-09-03 Fixed bug#5873 - Permissions fields are displaced in the EditSpecification of a Stat.
 - 2010-09-03 Fixed bug#5812 - Customer Interface Password Sent dialog could be less confusing.
 - 2010-09-03 Fixed bug#5870 - Login boxes in Customer Interface are too small.
 - 2010-09-03 Fixed bug#5811 - Customer Interface account creation error handling does not work correctly.
 - 2010-09-03 Fixed bug#5632 - New Ticket Search Dialog takes about 3 Seconds to load, 3 seconds
    with no feedback. User Experience need to get improved. Faster load of the dialog.
 - 2010-09-03 Fixed bug#5789 - Use of uninitialized value $_ in Kernel/System/CustomerUser/LDAP.pm.
 - 2010-09-03 Fixed bug#5691 - Not possbible for a package to modify a file
    that belongs to another package.
 - 2010-09-02 Fixed bug#5860 - Tooltips are not displayed correct in Customer
    interface.
 - 2010-09-02 Fixed bug#5811 - Customer Interface account creation error
    handling does not work correctly.
 - 2010-09-02 Fixed bug#5818 - Standard height of the article list.
 - 2010-09-02 Fixed bug#5693 - Error messages appearing during mysql tables
    migration.
 - 2010-09-02 Fixed bug#5802 - OTRS 3.0.0 beta 2 doesn't install default packages
    on login.
 - 2010-09-02 Fixed bug#5780 - Have to resize window when replying on ticket.