@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1377 2010-09-06 09:04:06 mg Exp $
+# $Id: CHANGES,v 1.1378 2010-09-06 10:31:09 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta3 ????-??-??
+ - 2010-09-06 Fixed bug#5875 - Customer ticket print view has too much information.
  - 2010-09-06 Fixed bug#5867 - Navigation bar does not obey click path.
  - 2010-09-06 Fixed bug#5871 - Ticket information in dashboard is not properly aligned.
  - 2010-09-06 Fixed bug#5876 - Chinese UI issue.
